--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,5 +1,9 @@
 name: Build macOS Application
 
+permissions:
+  contents: write
+  actions: read
+
 on:
   workflow_dispatch:
     inputs:
@@ -225,18 +229,6 @@ jobs:
         name: CSC-Reach-DMG-${{ needs.check-version.outputs.new-version || github.event.inputs.version || 'latest' }}
         path: build/dist/CSC-Reach-macOS.dmg
         retention-days: 30
-        
-    - name: Create Git Tag
-      if: needs.check-version.outputs.should-release == 'true' && !startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
-      run: |
-        version="${{ needs.check-version.outputs.new-version }}"
-        echo "Creating tag: $version"
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git tag -a $version -m "Release $version"
-        git push origin $version
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Create Release
       if: needs.check-version.outputs.should-release == 'true' && github.event_name != 'pull_request'
